--- a/overstock/package.json
+++ b/overstock/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "axios": "^1.2.1",
+    "firebase": "^9.15.0",
     "framer-motion": "^7.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
