--- a/overstock/package.json
+++ b/overstock/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^6.4.5",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "server": "^1.0.38"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
